--- a/_posts/2020-01-01-the-us-narrative-today.html
+++ b/_posts/2020-01-01-the-us-narrative-today.html
@@ -1483,107 +1483,107 @@ stories:
   domain: http://www.elberton.com/
   link: https://www.elberton.com/local/i-may-kind-take-it-personally
 images:
-- name: christianity-christianity-under-construction-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-satan-red.jpg
-- name: beach-clouds-lifeguard-beachclouds-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-hot-spicy.jpg
-- name: mediterranean-mediterranean-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-internet-numbers.jpg
-- name: blossombar-crunch-paper-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crunch-paper-file-00-00-24-99.jpg
-- name: gears-4882162452-fa3126b38d-b-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-deep-connections.jpg
-- name: paris-paris-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-alien-goggles.jpg
-- name: store-on-corner-oldcabin-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-alien-goggles.jpg
-- name: gears-4882162452-fa3126b38d-b-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-emily-carr.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-graham-sutherland.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-graham-sutherland.JPG
-- name: nyc-flag-nycflag-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colored-circuits.jpg
-- name: fence-mexico-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-smoking-cigarette.jpg
-- name: locked-up-steam-lock-up-steam-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-dali.jpg
-- name: dragon_close-up-udnie.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-udnie.jpg
-- name: dragon-desert-desert-dragon-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-sand-paper.jpg
-- name: curtain-curtain-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dali-three.jpg
-- name: razorcliff-razorcliff-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-sunday.jpg
-- name: nazi-invasion-berline-wall-old-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-berline-wall-old-building.jpg
-- name: old-granary-field-oldhouse-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-nazi-poster.jpg
-- name: mediterranean-mediterranean-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-matrix.jpg
-- name: server-racks-clouds-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-spagetti-accident.jpg
-- name: abandonedbuildings_alien_goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_alien_goggles.jpg
-- name: old-church-oldchurch-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-aqua.jpg
-- name: oldhotel-oldhotel-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-purple-pond.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-really-hot.jpg
-- name: braceros-domingo-ulloa-white-house-west-wing-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-white-house-west-wing-view.jpg
-- name: oldhousecars-house-old-cars-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-blue-brush.jpg
-- name: old-door-lock-old-door-lock-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-internet-numbers.jpg
-- name: capital-battle-capitolbattle-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-wols.jpg
-- name: dragon-desert-desert-dragon-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-colored-circuits.jpg
-- name: carry-load-carryload-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-purple-storm.jpg
-- name: downtown-old-empty-retail-norman-rockwell-ruby-bridges.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-old-empty-retail-norman-rockwell-ruby-bridges.jpg
-- name: rain-princess-city-building-trees-sky.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-city-building-trees-sky.jpg
-- name: dc-statue-dcstatue-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-matrix.jpg
-- name: stalin-time-pigeons-do-not-feed-them.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-pigeons-do-not-feed-them.jpg
-- name: school-clouds-church-clouds-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-feed-people.jpg
-- name: berlinwall-DSC-0084-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-post-modern.jpg
-- name: berlinwall2-berlinwall-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-sunday.jpg
-- name: machine-road-machine-road-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-rainbow-festival.jpg
-- name: copper-circuit-underground-subway_35929749683_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-underground-subway_35929749683_o.jpg
-- name: aws-s3-stories-algo-microservices.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-algo-microservices.jpg
-- name: razorwire-DSC-0080-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-atari-missle.jpg
-- name: white-house-lawn-white-house-lawn-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-satan-red.jpg
-- name: school-clouds-church-clouds-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-smoking-cigarette.jpg
-- name: wreck-IMG_6968.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_6968.jpg
-- name: aws-s3-square-C32Eg8bUEAEa-gj-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C32Eg8bUEAEa-gj-square.jpg
-- name: gypsy-wagon-gypsywagon-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-mucha-mult.jpg
-- name: border-crossing-bordercrossing-blue-electricity.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-blue-electricity.png
-- name: san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-free-woman.jpg
-- name: aws-s3-stories-old-gas-pumps.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-gas-pumps.jpg
-- name: oldcabin-store-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-colored-circuits.jpg
-- name: old-gas-pumps-oldgaspumps-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-graham-sutherland.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-clean-view.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-clean-view.png
+- name: old-house-oldhouse-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-sand-paper.jpg
+- name: stories-algo-microservices.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-algo-microservices.jpg
+- name: adam-smith-adam-smith-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-jap-wav-pr.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-5.jpg
+- name: oldroad-old-road-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-space-pizza.jpg
+- name: nazi-invasion-christ-cross-chalice.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-christ-cross-chalice.jpg
+- name: san-francisco-street-view-san-francisco-street-view-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-post-modern.jpg
+- name: beach-rocks-beach-rocks-currents-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-gan-vogh.jpg
+- name: razorcliff-razorcliff-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-hot-spicy.jpg
+- name: aws-s3-stories-new-machine-road-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-machine-road-blue-circuit-4.jpg
+- name: oldhousecars-house-old-cars-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-matrix.jpg
+- name: walled-garden-walled-garden-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-granite.jpg
+- name: death-valley-death-valley-national-park-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-blue-electricity.jpg
+- name: fence-mexico-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-mucha-mult.jpg
+- name: oldbarn-oldbarn-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-colored-circuits.jpg
+- name: white-house-lawn-white-house-window-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-smoking-cigarette.jpg
+- name: bordercrossing-bordercrossing-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-really-hot.jpg
+- name: walled-garden-walled-garden-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-dali-three.jpg
+- name: downtown-los-angeles-downtown-la-copper-circuit-2.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-copper-circuit-2.JPG
+- name: statue-of-liberty-front-view-statueofliberty-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dark-dali.jpg
+- name: old-door-lock-old-door-lock-2-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-kandinsky-bv.jpg
+- name: carry-load-carryload-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-space-pizza.jpg
+- name: blossombar-colorful-dream-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-dream-file-00-00-00-00.jpg
+- name: oldsmallboat-oldsmallboat-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-brush.jpg
+- name: nazi-invasion-DSC_0044-001.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0044-001.jpg
+- name: catacombs-catacombs-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-post-modern.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-clean-view.jpg
+- name: old-school-house-old-schoolhouse-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-alberto-giacometti.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-post-modern.jpg
+- name: school-clouds-church-clouds-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-kandinsky-bv.jpg
+- name: oldhouse-oldhouse-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-internet-numbers.jpg
+- name: lincoln-memorial-lincolnmemorial-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-blue-circuit.jpg
+- name: gears-4882162452-fa3126b38d-b-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-cinnamon-rolls.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-yellow-collage.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-yellow-collage.png
+- name: downtown-fredericksburg-downtown-fredericksburg-blue-circuit-3.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-circuit-3.JPG
+- name: containership-containership-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-free-woman.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-rainbow-festival.jpg
+- name: old-school-house-old-schoolhouse-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-brush.jpg
+- name: ellis-island-ellis-island-room-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-matrix.jpg
+- name: border-fence-border-fence-on-hill-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-far-away.jpg
+- name: oldcabin-oldcabin-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-crunch-paper.jpg
+- name: la-muse-dark-city-buildings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-dark-city-buildings.jpg
+- name: containership-containership-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-mucha-mult.jpg
+- name: aws-s3-stories-carryload-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-carryload-dali-three.jpg
+- name: oldbarn-oldbarn-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-aqua.jpg
+- name: old-church-oldchurch-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-asteroids.jpg
+- name: mistywoods-babyfoot-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-matrix.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-blue-circuit-4.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-circuit-4.JPG
+- name: gears-4882162452-fa3126b38d-b-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-neo-instinct.jpg
+- name: bf-skinner-downtown-light-posts.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-downtown-light-posts.jpg
 ---
 Fetal Remains At Abortion Doc's Properties Can't Be ID'd.&nbsp;Jail Expenses Expand County Budget.&nbsp;Hanna Springs Students Write Letters To Santa.&nbsp;Sidelined For Months, Greg Pateryn Eager To Contribute With Wild.&nbsp;Fortepian I Jego Noworoczna Muzyka.&nbsp;Restaurant Hosting Show To Help Artists Fighting Mental Illness.&nbsp;Residents Continue Flood Cleanup.&nbsp;Tips For Buying Electronic Components Online.&nbsp;
